     If Solo active: the extra column buttons solo/unsolo tracks

     LED Colour coding:
     - LED off: Track neither muted nor soloed
     - LED green: Track muted
     - LED yellow: Track soloed
     - LED red: Track muted and soloed - solo has higher priority, therefore track will be played

     Special Key combinations:
     - ALT+Mute clears all mutes
     - ALT+Solo clears all solos

   o added Humanizer2 Fx from Borfo


MIDIboxSEQ V4.087
~~~~~~~~~~~~~~~~~

   o new page: "Track Instrument"
     Can be selected with MENU->EVNT->Trk Inst (GP #8) or from the main page (after Track Event item)
     Allows to configure the MIDI port, channel and instrument name.

   o the new Track Instrument page also allows to select Program Change and Bank (Low/High byte)
     If activated, these parameters will be sent when the sequencer is started and on pattern changes.
     Please note: a program and bank change can stall your synth so that the first note could be delayed!
     Use this function only when the device can handle patch changes quickly!

   o added CV_GATE_SR1 and CLK_SR to MBSEQ_HW.V4 config
     This is the prefered option to add CV gates and DIN clock/start signals to your MIDIbox SEQ in future.
     See also updated http://www.ucapps.de/midibox_seq_manual_hw.html

   o 8 individual DIN Sync clock outputs with individual divider and pulsewidth values are
     provided now. A clock output can optionally be turned to a Start/Stop output.
     The outputs are available at the configured CLK_SR DOUT shift register pin D7..D0
     (D7=first output, D6=second output, etc...)
     The clock parameters can be configured in the CV configuration page.

   o Mixer page: channel events can be dumped by pressing the corresponding GP button.
     This also allows to prepare different mixer setups, sending to the same channel, triggered
     by a GP button

   o Mixer page: press SELECT to activate/deactivate "live sending" mode (values are sent